adjusting logic to prevent flickering, fix docker healthcheck interval time

--- a/app/frontend/src/app/app.component.scss
+++ b/app/frontend/src/app/app.component.scss
@@ -4,3 +4,11 @@
   min-height: calc(100vh - $navbar-height);
   padding: calc($navbar-height / 2.5);
 }
+
+.app-init {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: $color-bg;
+}
